# rest_api_django

./: build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
mysite/: settings.py  urls.py
youtube_bot/: apps.py  index.html  urls.py  utils.py  views.py
youtube_bot/templates/: index.html
youtube_bot_api_2/: asgi.py  settings.py  urls.py  wsgi.py
