[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Madhav Madhusoodanan <f20200049@pilani.bits-pilani.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
